// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReduxTypes should have specific type properties: all redux types 1`] = `
Object {
  "appTypes": Object {
    "STATUS_4XX": "4XX",
    "STATUS_5XX": "5XX",
  },
  "default": Object {
    "app": Object {
      "STATUS_4XX": "4XX",
      "STATUS_5XX": "5XX",
    },
    "graph": Object {
      "SET_GRAPH_LEGEND": "SET_GRAPH_LEGEND",
    },
    "inventory": Object {
      "SET_INVENTORY_TAB": "SET_INVENTORY_TAB",
    },
    "platform": Object {
      "PLATFORM_ADD_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/ADD_NOTIFICATION",
      "PLATFORM_APP_NAME": "PLATFORM_APP_NAME",
      "PLATFORM_CLEAR_NOTIFICATIONS": "@@INSIGHTS-CORE/NOTIFICATIONS/CLEAR_NOTIFICATIONS",
      "PLATFORM_GLOBAL_FILTER_HIDE": "PLATFORM_GLOBAL_FILTER_HIDE",
      "PLATFORM_INIT": "PLATFORM_INIT",
      "PLATFORM_ON_NAV": "PLATFORM_ON_NAV",
      "PLATFORM_REMOVE_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/REMOVE_NOTIFICATION",
      "PLATFORM_SET_NAV": "PLATFORM_SET_NAV",
    },
    "query": Object {
      "SET_QUERY_CLEAR": "SET_QUERY_CLEAR",
      "SET_QUERY_CLEAR_INVENTORY_LIST": "SET_QUERY_CLEAR_INVENTORY_LIST",
      "SET_QUERY_RHSM_TYPES": Object {
        "dir": "SET_QUERY_RHSM_dir",
        "granularity": "SET_QUERY_RHSM_granularity",
        "limit": "SET_QUERY_RHSM_limit",
        "offset": "SET_QUERY_RHSM_offset",
        "sla": "SET_QUERY_RHSM_sla",
        "sort": "SET_QUERY_RHSM_sort",
        "uom": "SET_QUERY_RHSM_uom",
        "usage": "SET_QUERY_RHSM_usage",
      },
    },
    "rhsm": Object {
      "GET_GRAPH_REPORT_CAPACITY_RHSM": "GET_GRAPH_REPORT_CAPACITY_RHSM",
      "GET_HOSTS_INVENTORY_GUESTS_RHSM": "GET_HOSTS_INVENTORY_GUESTS_RHSM",
      "GET_HOSTS_INVENTORY_RHSM": "GET_HOSTS_INVENTORY_RHSM",
      "GET_MESSAGE_REPORTS_RHSM": "GET_MESSAGE_REPORTS_RHSM",
      "GET_SUBSCRIPTIONS_INVENTORY_RHSM": "GET_SUBSCRIPTIONS_INVENTORY_RHSM",
    },
    "toolbar": Object {
      "SET_ACTIVE_FILTERS": "SET_ACTIVE_FILTERS",
      "SET_FILTER_TYPE": "SET_FILTER_TYPE",
    },
    "user": Object {
      "DELETE_USER_OPTIN": "DELETE_USER_OPTIN",
      "GET_USER_OPTIN": "GET_USER_OPTIN",
      "UPDATE_USER_OPTIN": "UPDATE_USER_OPTIN",
      "USER_AUTH": "USER_AUTH",
      "USER_LOCALE": "USER_LOCALE",
      "USER_LOGOUT": "USER_LOGOUT",
    },
  },
  "graphTypes": Object {
    "SET_GRAPH_LEGEND": "SET_GRAPH_LEGEND",
  },
  "inventoryTypes": Object {
    "SET_INVENTORY_TAB": "SET_INVENTORY_TAB",
  },
  "platformTypes": Object {
    "PLATFORM_ADD_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/ADD_NOTIFICATION",
    "PLATFORM_APP_NAME": "PLATFORM_APP_NAME",
    "PLATFORM_CLEAR_NOTIFICATIONS": "@@INSIGHTS-CORE/NOTIFICATIONS/CLEAR_NOTIFICATIONS",
    "PLATFORM_GLOBAL_FILTER_HIDE": "PLATFORM_GLOBAL_FILTER_HIDE",
    "PLATFORM_INIT": "PLATFORM_INIT",
    "PLATFORM_ON_NAV": "PLATFORM_ON_NAV",
    "PLATFORM_REMOVE_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/REMOVE_NOTIFICATION",
    "PLATFORM_SET_NAV": "PLATFORM_SET_NAV",
  },
  "queryTypes": Object {
    "SET_QUERY_CLEAR": "SET_QUERY_CLEAR",
    "SET_QUERY_CLEAR_INVENTORY_LIST": "SET_QUERY_CLEAR_INVENTORY_LIST",
    "SET_QUERY_RHSM_TYPES": Object {
      "dir": "SET_QUERY_RHSM_dir",
      "granularity": "SET_QUERY_RHSM_granularity",
      "limit": "SET_QUERY_RHSM_limit",
      "offset": "SET_QUERY_RHSM_offset",
      "sla": "SET_QUERY_RHSM_sla",
      "sort": "SET_QUERY_RHSM_sort",
      "uom": "SET_QUERY_RHSM_uom",
      "usage": "SET_QUERY_RHSM_usage",
    },
  },
  "reduxTypes": Object {
    "app": Object {
      "STATUS_4XX": "4XX",
      "STATUS_5XX": "5XX",
    },
    "graph": Object {
      "SET_GRAPH_LEGEND": "SET_GRAPH_LEGEND",
    },
    "inventory": Object {
      "SET_INVENTORY_TAB": "SET_INVENTORY_TAB",
    },
    "platform": Object {
      "PLATFORM_ADD_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/ADD_NOTIFICATION",
      "PLATFORM_APP_NAME": "PLATFORM_APP_NAME",
      "PLATFORM_CLEAR_NOTIFICATIONS": "@@INSIGHTS-CORE/NOTIFICATIONS/CLEAR_NOTIFICATIONS",
      "PLATFORM_GLOBAL_FILTER_HIDE": "PLATFORM_GLOBAL_FILTER_HIDE",
      "PLATFORM_INIT": "PLATFORM_INIT",
      "PLATFORM_ON_NAV": "PLATFORM_ON_NAV",
      "PLATFORM_REMOVE_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/REMOVE_NOTIFICATION",
      "PLATFORM_SET_NAV": "PLATFORM_SET_NAV",
    },
    "query": Object {
      "SET_QUERY_CLEAR": "SET_QUERY_CLEAR",
      "SET_QUERY_CLEAR_INVENTORY_LIST": "SET_QUERY_CLEAR_INVENTORY_LIST",
      "SET_QUERY_RHSM_TYPES": Object {
        "dir": "SET_QUERY_RHSM_dir",
        "granularity": "SET_QUERY_RHSM_granularity",
        "limit": "SET_QUERY_RHSM_limit",
        "offset": "SET_QUERY_RHSM_offset",
        "sla": "SET_QUERY_RHSM_sla",
        "sort": "SET_QUERY_RHSM_sort",
        "uom": "SET_QUERY_RHSM_uom",
        "usage": "SET_QUERY_RHSM_usage",
      },
    },
    "rhsm": Object {
      "GET_GRAPH_REPORT_CAPACITY_RHSM": "GET_GRAPH_REPORT_CAPACITY_RHSM",
      "GET_HOSTS_INVENTORY_GUESTS_RHSM": "GET_HOSTS_INVENTORY_GUESTS_RHSM",
      "GET_HOSTS_INVENTORY_RHSM": "GET_HOSTS_INVENTORY_RHSM",
      "GET_MESSAGE_REPORTS_RHSM": "GET_MESSAGE_REPORTS_RHSM",
      "GET_SUBSCRIPTIONS_INVENTORY_RHSM": "GET_SUBSCRIPTIONS_INVENTORY_RHSM",
    },
    "toolbar": Object {
      "SET_ACTIVE_FILTERS": "SET_ACTIVE_FILTERS",
      "SET_FILTER_TYPE": "SET_FILTER_TYPE",
    },
    "user": Object {
      "DELETE_USER_OPTIN": "DELETE_USER_OPTIN",
      "GET_USER_OPTIN": "GET_USER_OPTIN",
      "UPDATE_USER_OPTIN": "UPDATE_USER_OPTIN",
      "USER_AUTH": "USER_AUTH",
      "USER_LOCALE": "USER_LOCALE",
      "USER_LOGOUT": "USER_LOGOUT",
    },
  },
  "rhsmTypes": Object {
    "GET_GRAPH_REPORT_CAPACITY_RHSM": "GET_GRAPH_REPORT_CAPACITY_RHSM",
    "GET_HOSTS_INVENTORY_GUESTS_RHSM": "GET_HOSTS_INVENTORY_GUESTS_RHSM",
    "GET_HOSTS_INVENTORY_RHSM": "GET_HOSTS_INVENTORY_RHSM",
    "GET_MESSAGE_REPORTS_RHSM": "GET_MESSAGE_REPORTS_RHSM",
    "GET_SUBSCRIPTIONS_INVENTORY_RHSM": "GET_SUBSCRIPTIONS_INVENTORY_RHSM",
  },
  "toolbarTypes": Object {
    "SET_ACTIVE_FILTERS": "SET_ACTIVE_FILTERS",
    "SET_FILTER_TYPE": "SET_FILTER_TYPE",
  },
  "userTypes": Object {
    "DELETE_USER_OPTIN": "DELETE_USER_OPTIN",
    "GET_USER_OPTIN": "GET_USER_OPTIN",
    "UPDATE_USER_OPTIN": "UPDATE_USER_OPTIN",
    "USER_AUTH": "USER_AUTH",
    "USER_LOCALE": "USER_LOCALE",
    "USER_LOGOUT": "USER_LOGOUT",
  },
}
`;

exports[`ReduxTypes should have specific type properties: specific types 1`] = `
Object {
  "app": Object {
    "STATUS_4XX": "4XX",
    "STATUS_5XX": "5XX",
  },
  "graph": Object {
    "SET_GRAPH_LEGEND": "SET_GRAPH_LEGEND",
  },
  "inventory": Object {
    "SET_INVENTORY_TAB": "SET_INVENTORY_TAB",
  },
  "platform": Object {
    "PLATFORM_ADD_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/ADD_NOTIFICATION",
    "PLATFORM_APP_NAME": "PLATFORM_APP_NAME",
    "PLATFORM_CLEAR_NOTIFICATIONS": "@@INSIGHTS-CORE/NOTIFICATIONS/CLEAR_NOTIFICATIONS",
    "PLATFORM_GLOBAL_FILTER_HIDE": "PLATFORM_GLOBAL_FILTER_HIDE",
    "PLATFORM_INIT": "PLATFORM_INIT",
    "PLATFORM_ON_NAV": "PLATFORM_ON_NAV",
    "PLATFORM_REMOVE_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/REMOVE_NOTIFICATION",
    "PLATFORM_SET_NAV": "PLATFORM_SET_NAV",
  },
  "query": Object {
    "SET_QUERY_CLEAR": "SET_QUERY_CLEAR",
    "SET_QUERY_CLEAR_INVENTORY_LIST": "SET_QUERY_CLEAR_INVENTORY_LIST",
    "SET_QUERY_RHSM_TYPES": Object {
      "dir": "SET_QUERY_RHSM_dir",
      "granularity": "SET_QUERY_RHSM_granularity",
      "limit": "SET_QUERY_RHSM_limit",
      "offset": "SET_QUERY_RHSM_offset",
      "sla": "SET_QUERY_RHSM_sla",
      "sort": "SET_QUERY_RHSM_sort",
      "uom": "SET_QUERY_RHSM_uom",
      "usage": "SET_QUERY_RHSM_usage",
    },
  },
  "rhsm": Object {
    "GET_GRAPH_REPORT_CAPACITY_RHSM": "GET_GRAPH_REPORT_CAPACITY_RHSM",
    "GET_HOSTS_INVENTORY_GUESTS_RHSM": "GET_HOSTS_INVENTORY_GUESTS_RHSM",
    "GET_HOSTS_INVENTORY_RHSM": "GET_HOSTS_INVENTORY_RHSM",
    "GET_MESSAGE_REPORTS_RHSM": "GET_MESSAGE_REPORTS_RHSM",
    "GET_SUBSCRIPTIONS_INVENTORY_RHSM": "GET_SUBSCRIPTIONS_INVENTORY_RHSM",
  },
  "toolbar": Object {
    "SET_ACTIVE_FILTERS": "SET_ACTIVE_FILTERS",
    "SET_FILTER_TYPE": "SET_FILTER_TYPE",
  },
  "user": Object {
    "DELETE_USER_OPTIN": "DELETE_USER_OPTIN",
    "GET_USER_OPTIN": "GET_USER_OPTIN",
    "UPDATE_USER_OPTIN": "UPDATE_USER_OPTIN",
    "USER_AUTH": "USER_AUTH",
    "USER_LOCALE": "USER_LOCALE",
    "USER_LOGOUT": "USER_LOGOUT",
  },
}
`;
